--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <p class="lead mb-5"><i class="fas fa-user-graduate text-primary"></i> Bacharela em Ciência da Computação - Unicarioca - 2019/2
             <br><i class="fas fa-book text-primary"></i> Estudante do 6° período de Engenharia da Computação - Unicarioca - 2022/2
             <br><i class="fas fa-chart-line text-primary"></i> Pós graduanda em Business Intelligence - UNICIV
-            <br><i class="far fa-star text-primary"></i> Vivência na área de desenvolvimento de sistemas web e na construção de dashboards/painéis com indicadores que auxiliam a tomada de decisões estratégicas
+            <br><i class="far fa-star text-primary"></i> Vivência na área de desenvolvimento de sistemas web e na construção de dashboards/painéisgit  com indicadores que auxiliam a tomada de decisões estratégicas
           </p> 
             
             <div class="social-icons">
@@ -348,6 +348,9 @@
         <div class="my-auto">
           <h2 class="mb-5">Conquistas &amp; Certificações</h2>
           <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Dominando o Power BI - Trinity Strategy - 2020</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Webdeveloper C#.NET Avançado - COTI Informática - 2018</li>
