--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="subheading mb-5">Desenvolvedora Web · Rio de Janeiro ·
             <a href="mailto:julianagoncalves.jgp@gmail.com">julianagoncalves.jgp@gmail.com</a>
           </div>
-          <p class="lead mb-5"><i class="fas fa-user-graduate text-primary"></i> Bacharela em Ciência da Computação - Unicarioca - 2019/2
+          <p class="lead mb-5"><i class="fas fa-user-graduate text-primary"></i> Graduada em Ciência da Computação - Unicarioca - 2019/2
             <br><i class="fas fa-book text-primary"></i> Estudante do 6° período de Engenharia da Computação - Unicarioca - 2022/2
             <br><i class="fas fa-chart-line text-primary"></i> Pós graduanda em Business Intelligence - UNICIV
             <br><i class="far fa-star text-primary"></i> Vivência na área de desenvolvimento de sistemas web e na construção de dashboards/painéis com indicadores que auxiliam a tomada de decisões estratégicas
