--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Conquistas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#portifolio">Portifolio</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -65,13 +68,13 @@
         <div class="my-auto">
           <h1 class="mb-0">
             <span class="text-primary">Juliana</span>
-            <span class="text-primary">Gonçalves</span>
+            <span class="text-primary">Goncalves</span>
           </h1>
           <div class="subheading mb-5">Desenvolvedora Web · Rio de Janeiro ·
             <a href="mailto:julianagoncalves.jgp@gmail.com">julianagoncalves.jgp@gmail.com</a>
           </div>
           <p class="lead mb-5"><i class="fas fa-user-graduate text-primary"></i> Graduada em Ciência da Computação - Unicarioca - 2019/2
-            <br><i class="fas fa-book text-primary"></i> Estudante do 6° período de Engenharia da Computação - Unicarioca - 2022/2
+            <br><i class="fas fa-book text-primary"></i> Estudante do 6° período de Engenharia da Computação - Unicarioca
             <br><i class="fas fa-chart-line text-primary"></i> Pós graduanda em Business Intelligence - UNICIV
             <br><i class="far fa-star text-primary"></i> Vivência na área de desenvolvimento de sistemas web e na construção de dashboards/painéis com indicadores que auxiliam a tomada de decisões estratégicas
           </p> 
@@ -84,11 +87,6 @@
             <a href="mailto:julianagoncalves.jgp@gmail.com">
               <i class="far fa-envelope"></i> 
             </a>
-            <!--
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            -->
           </div>
         </div>
       </section>
@@ -234,8 +232,7 @@
                 <i class="fa-li fa fa-check"></i>
                  Runrun.it </li>
           </ul>
-
-          
+    
           <br><div class="subheading mb-3">Desenvolvimento Web</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -317,7 +314,6 @@
                 Github
                 </li>
           </ul>
-
         </div>
       </div>
 
@@ -367,6 +363,16 @@
         </div>
       </section>
 
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portifolio">
+        <div class="my-auto">
+          <h2 class="mb-5">Portifolio</h2>
+          <p class="lead mb-5"><i class="fas fa-laptop text-primary"></i> Painel para Acompanhamento de Ocorências de Queimadas nas últimas 48h - <br> Consumindo API do Instituto Nacional de Pesquisas Espaciais</p>
+          <iframe width="1000" height="1050" src="https://app.powerbi.com/reportEmbed?reportId=a4bdb1cc-3fc3-43fb-8025-2d18864e2ddc&autoAuth=true&ctid=5e07ae6e-562b-416d-84a3-21f574a3a42d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWJyYXppbC1zb3V0aC1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
+        </div>
+      </section>
+
     </div>
 
     <!-- Bootstrap core JavaScript -->
@@ -380,5 +386,4 @@
     <script src="js/resume.min.js"></script>
 
   </body>
-
 </html>
