--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Bacharela em Ciência da Computação</h3>
+              <h3 class="mb-0">Graduação em Ciência da Computação</h3>
               <div class="subheading mb-3">Unicarioca</div>
             </div>
             <div class="resume-date text-md-right">
